<resources>
    <string name="app_name">E-Learning</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email </string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Récupérer  votre mot de passe</string>
    <string name="forgot_password_msg">Veuillez entrer votre email et suivre les instructions demandées.</string>
    <string name="email_id">Email ID</string>


    <string-array name="modules_all">
        <item>Choisir module ...</item>
        <item>Develepement Web</item>
        <item>Develepement Mobile</item>
        <item>Base De Donnes</item>
        <item>UML</item>
        <item>Python</item>
        <item>Big Data</item>
        <item>Gestion de projet</item>
    </string-array>

    <string-array name="filiers_all">
        <item>Choisirs Filiere ...</item>
        <item>MASTER ISI</item>
    </string-array>

    <string-array name="type_all">
        <item>Choisirs Type ...</item>
        <item>Cours</item>
        <item>TD/TP</item>
    </string-array>


    <string name="nav_home">Home</string>
    <string name="nav_notif">Notification</string>
    <string name="nav_search">Search </string>

    <string name="nav_reset">Reset</string>
    <string name="nav_list_etudiant">Etudiants</string>

    <string name="nav_universityt">University</string>

    <string name="Deconnecter">Deconnecter</string>






</resources>
