<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constI"
    android:layout_height="match_parent"
    tools:context="com.firebaseloginapp.AccountActivity.SignupActivity">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:id="@+id/logoE"
android:layout_marginTop="10dp"
        android:src="@drawable/elearning"
        android:contentDescription="Inscritpion "
        tools:ignore="ContentDescription" />
       >

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"


        >

        <RadioButton
            android:id="@+id/ProfR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/logoE"
            android:layout_marginLeft="60dp"
            android:text="Professeur" />

        <RadioButton
            android:id="@+id/EtudiantR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Etudiant" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/etudlayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/nomE"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"

            android:ems="10"
            android:hint="Nom"
            android:inputType="textPersonName"
             />

        <EditText
            android:id="@+id/prenomE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomE"

            android:ems="10"
            android:hint="Prenom"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="cne"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="201dp" />

        <EditText
            android:id="@+id/filier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="fillier"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="256dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"

            android:textColor="#190714"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="320dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#190714"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="381dp" />

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="443dp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="510dp" />



        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/proflayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/nomP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"

            android:ems="10"
            android:hint="Nom"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/prenomP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomE"

            android:ems="10"
            android:hint="Prenom"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Module"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Module"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="201dp" />

        <EditText
            android:id="@+id/filierP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="fillier"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="256dp" />

        <EditText
            android:id="@+id/emailP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"

            android:textColor="#190714"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="320dp" />

        <EditText
            android:id="@+id/passwordP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"

            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#190714"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="381dp" />

        <Button
            android:id="@+id/sign_up_buttonP"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="443dp" />

        <Button
            android:id="@+id/sign_in_buttonP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="510dp" />

            >


        <ProgressBar
            android:id="@+id/progressBarp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
